# ros_control

./: .gitignore  .hgignore  .travis.yml  CMakeLists.txt  README.md  catkin_basic.cmake  ros_control.rosinstall  stack.xml  tracks.yaml
combined_robot_hw/: CHANGELOG.rst  CMakeLists.txt  package.xml
combined_robot_hw/include/combined_robot_hw/: combined_robot_hw.h
combined_robot_hw/src/: combined_robot_hw.cpp
combined_robot_hw_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml  test_robot_hw_plugin.xml
combined_robot_hw_tests/include/combined_robot_hw_tests/: my_robot_hw_1.h  my_robot_hw_2.h  my_robot_hw_3.h  my_robot_hw_4.h  my_robot_hw_5.h
combined_robot_hw_tests/src/: dummy_app.cpp  my_robot_hw_1.cpp  my_robot_hw_2.cpp  my_robot_hw_3.cpp  my_robot_hw_4.cpp  my_robot_hw_5.cpp
combined_robot_hw_tests/test/: cm_test.cpp  cm_test.test  combined_robot_hw_test.cpp  combined_robot_hw_test.test
composite_controller_interface/: CMakeLists.txt  package.xml
composite_controller_interface/include/composite_controller_interface/: composite_controller.h
composite_hardware_interface/: CMakeLists.txt  package.xml
composite_hardware_interface/include/composite_hardware_interface/: composite_robot_hw.h  device_hw.h  shared_data_manager.h  shared_interface_manager.h  shared_resource_manager.h  shared_urdf_model.h
control_toolbox/: .gitignore  CMakeLists.txt  doc.h  manifest.xml  package.xml
control_toolbox/include/control_toolbox/: dither.h  filters.h  limited_proxy.h  pid.h  pid_gains_setter.h  sine_sweep.h  sinusoid.h
control_toolbox/scripts/: tune_pid.py
control_toolbox/scripts/.svn/: all-wcprops  entries
control_toolbox/src/: dither.cpp  limited_proxy.cpp  pid.cpp  pid_gains_setter.cpp  sine_sweep.cpp  sinusoid.cpp
control_toolbox/srv/: SetPidGains.srv
control_toolbox/test/: pid_tests.cpp
controller_interface/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  manifest.xml.ignore  package.xml
controller_interface/include/controller_interface/: composite_controller.h  controller.h  controller_base.h  multi_controller.h  multi_interface_controller.h
controller_interface/src/: dummy_controller.cpp
controller_interface/test/: composite_controller_test.cpp  controller_base_test.cpp
controller_manager/: CHANGELOG.rst  CMakeLists.txt  README.md  compile_commands.json  manifest.xml  manifest.xml.ignore  package.xml  rosdoc.yaml  setup.py
controller_manager/include/controller_manager/: controller_info.h  controller_loader.h  (+4 more)
controller_manager/scripts/: controller_group  controller_manager  spawner  unspawner
controller_manager/src/: controller_manager.cpp  controller_stopper.cpp  controller_stopper_node.cpp  dummy.cpp
controller_manager/test/: hwi_switch_test.cpp  hwi_switch_test.test  hwi_switch_test.yaml  hwi_update_test.cpp  hwi_update_test.test  hwi_update_test.yaml
controller_manager_msgs/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  rosdoc.yaml  setup.py
controller_manager_msgs/msg/: ControllerState.msg  ControllerStatistics.msg  ControllersStatistics.msg  HardwareInterfaceResources.msg  Resource.msg  ResourceList.msg
controller_manager_msgs/srv/: ListControllerTypes.srv  ListControllers.srv  SwitchController.srv
controller_manager_tests/: CHANGELOG.rst  CMakeLists.txt  dummy.launch  manifest.xml  package.xml  setup.py  test_controllers_plugin.xml
controller_manager_tests/src/: dummy_app.cpp  effort_test_controller.cpp  extensible_controllers.cpp  multi_dummy_app.cpp  multi_robot_hw.cpp  my_dummy_controller.cpp  my_robot_hw.cpp  pos_eff_controller.cpp  pos_eff_opt_controller.cpp  pub_period_controller.cpp  vel_eff_controller.cpp  vel_effort_test_controller.cpp
controller_manager_tests/test/: cm_msgs_utils_rostest.py  cm_msgs_utils_rostest.test  cm_msgs_utils_test.py  cm_test.cpp  cm_test.test  controller_manager_interface_test.py  controller_manager_interface_test.test  controller_manager_scripts.py  controller_manager_scripts.test  controller_params.yaml  multi_cm_dummy.py  multi_cm_test.cpp  multi_cm_test.test
extended_robot_hw_tests/: CMakeLists.txt  extended_plugins.xml  package.xml
extended_robot_hw_tests/src/: extended_simple_transmission_loader.cpp  foo_joint_interface_provider.cpp
extended_robot_hw_tests/test/: extended_actuator_interface.h  extended_joint_interface.h  extended_robot_hw_test.cpp  extended_robot_hw_test.test
hardware_interface/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  manifest.xml.ignore  package.xml  rosdoc.yaml
hardware_interface/src/: dummy_interface.cpp
hardware_interface/test/: actuator_command_interface_test.cpp  actuator_state_interface_test.cpp  force_torque_sensor_interface_test.cpp  hardware_resource_manager_test.cpp  imu_sensor_interface_test.cpp  interface_manager_test.cpp  joint_command_interface_test.cpp  joint_dynamic_state_interface_test.cpp  joint_state_interface_test.cpp  posvel_command_interface_test.cpp  posvelacc_command_interface_test.cpp  resource_manager_test.cpp  robot_hw_group_test.cpp  robot_hw_test.cpp
joint_limits_interface/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  manifest.xml.ignore  package.xml
joint_limits_interface/test/: joint_limits_interface_test.cpp  joint_limits_rosparam.yaml  joint_limits_rosparam_test.cpp  joint_limits_urdf_test.cpp
joint_state_controller/: CMakeLists.txt  joint_state_controller.launch  joint_state_controller.yaml  joint_state_plugin.xml  manifest.xml  package.xml
joint_state_controller/src/: dummy.cpp  joint_state_controller.cpp  joint_state_publisher.cpp
realtime_tools/: CMakeLists.txt  manifest.xml  package.xml
realtime_tools/scripts/: channelecho.py
realtime_tools/src/: realtime_clock.cpp
realtime_utils/: CMakeLists.txt  doc.dox  manifest.xml  package.xml
ros_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_control/documentation/: gazebo_ros_control.odg
rqt_controller_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_controller_manager/plugins/: plugin.xml
rqt_controller_manager/scripts/: rqt_controller_manager
(+155 files in other folders)
