<?xml version="1.0"?>
<package format="2">
  <name>combined_robot_hw</name>
  <version>0.12.0</version>
  <description>Combined Robot HW class.</description>
  <maintainer email="toni@shadowrobot.com">Toni Oliver</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author email="toni@shadowrobot.com">Toni Oliver</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
</package>
