<?xml version="1.0"?>
<package format="2">
  <name>combined_robot_hw_tests</name>
  <version>0.13.3</version>
  <description>The combined_robot_hw_tests package</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="toni@shadowrobot.com">Toni Oliver</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author email="toni@shadowrobot.com">Toni Oliver</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>combined_robot_hw</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_tests</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>

  <test_depend>rostest</test_depend>

  <export>
    <hardware_interface plugin="${prefix}/test_robot_hw_plugin.xml"/>
  </export>
</package>
