<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>combined_robot_hw_tests</name>
  <version>0.19.3</version>
  <description>Tests for the combined Robot HW class.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="toni@shadowrobot.com">Toni Oliver</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-controls/ros_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author email="toni@shadowrobot.com">Toni Oliver</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>combined_robot_hw</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend> <!-- exec_depend required for plugin -->
  <depend>roscpp</depend>

  <build_depend>pluginlib</build_depend>

  <build_export_depend>pluginlib</build_export_depend>

  <test_depend>controller_manager_msgs</test_depend>
  <test_depend>controller_manager_tests</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <hardware_interface plugin="${prefix}/test_robot_hw_plugin.xml"/>
  </export>
</package>
