<package>
  <name>controller_manager_msgs</name>
  <version>0.0.1</version>
  <description>
    Messages and services for the controller manager.
  </description>
  <author>Wim Meeussen</author>
  <maintainer email="wim@hidof.com">Wim Meeussen</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/controller_manager_msgs</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>genmsg</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
